--- a/Site about Mars/index.html
+++ b/Site about Mars/index.html
@@ -7,8 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        
+    <nav class="nav-section">
+        <section class="section-left">
+            <a href=""><img src="img/logo.svg"></a>
+            <p class="nav-text">навигация</p>
+        </section>
+        <section class="section-right">
+            <div>
+                <a href="">О планете</a>
+                <a href="">Об изучении</a>
+                <a href="">О спутниках</a>
+                <a href="">О колонизации</a>
+            </div>
+        </section>
     </nav>
 </body>
 <html>
+
+<!-- В первом уроке тебе нужно было сделать рабочий макет внутри программы figma, по образцу, который тебе предоставлен. Или же сделать свой сайт по тематике, но следуя структуре, представленной в шаблоне.
+
+Сегодня же домашним заданием будет являться верстка этого дизайна. Верстка должна быть выполнена с использованием семантических тегов и проверена на валидаторе, на предмет ошибок в коде.
+Материалы в папке "Знакомство с Figma" -->
