--- a/Site about Mars/index.html
+++ b/Site about Mars/index.html
@@ -13,7 +13,7 @@
             <p class="nav-text">навигация</p>
         </section>
         <section class="section-right">
-            <div>
+            <div class="section-right-container">
                 <a href="">О планете</a>
                 <a href="">Об изучении</a>
                 <a href="">О спутниках</a>
@@ -21,10 +21,38 @@
             </div>
         </section>
     </nav>
+    <header class="header-section">
+        <div class="header-bg">
+            <img src="img/header-planet.svg" class="header-planet">
+            <img src="img/header-rocket.svg"  class="header-rocket">
+        </div>
+        <div class="header-content">
+            <h1>Mars</h1>
+            <h2>Мир красного песка</h2>
+            <button>узнать больше</button>
+        </div>
+    </header>
+    <main class="main-section">
+        <section class="about-container">
+            <div class="about-left">
+                <div class="about-alien">
+                    <img src="img/section-2-alien-eye.svg" class="about-alien-eye">
+                </div>
+                <img src="img/section-2-planets.svg" class="about-planet">
+            </div>
+            <div class="about-right">
+                <h2>О планете</h2>
+                <p>Марс - это четвертая планета от Солнца. Его масса составляет 6,39E23 kg. Атмосферное давление на марсе составляет 6.01 мбар, а уровень кислорода в ней достигает всего лишь 0,145%. Температуры достигают от -153 до +35 градусов Цельсия. Один год на Марсе равен 687 дней</p>
+            </div>
+        </section>
+    </main>
+    <section class="section-study">
+
+    </section>
 </body>
 <html>
 
 <!-- В первом уроке тебе нужно было сделать рабочий макет внутри программы figma, по образцу, который тебе предоставлен. Или же сделать свой сайт по тематике, но следуя структуре, представленной в шаблоне.
 
 Сегодня же домашним заданием будет являться верстка этого дизайна. Верстка должна быть выполнена с использованием семантических тегов и проверена на валидаторе, на предмет ошибок в коде.
-Материалы в папке "Знакомство с Figma" -->
+Материалы в папке "Знакомство с Figma -->
