--- a/Site about Mars/index.html
+++ b/Site about Mars/index.html
@@ -1,58 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav class="nav-section">
-        <section class="section-left">
-            <a href=""><img src="img/logo.svg"></a>
-            <p class="nav-text">навигация</p>
-        </section>
-        <section class="section-right">
-            <div class="section-right-container">
-                <a href="">О планете</a>
-                <a href="">Об изучении</a>
-                <a href="">О спутниках</a>
-                <a href="">О колонизации</a>
-            </div>
-        </section>
+      <section class="section-left">
+        <a href=""><img src="img/logo.svg" /></a>
+        <p class="nav-text">навигация</p>
+      </section>
+      <section class="section-right">
+        <div class="section-right-container">
+          <a href="">О планете</a>
+          <a href="">Об изучении</a>
+          <a href="">О спутниках</a>
+          <a href="">О колонизации</a>
+        </div>
+      </section>
     </nav>
     <header class="header-section">
-        <div class="header-bg">
-            <img src="img/header-planet.svg" class="header-planet">
-            <img src="img/header-rocket.svg"  class="header-rocket">
-        </div>
-        <div class="header-content">
-            <h1>Mars</h1>
-            <h2>Мир красного песка</h2>
-            <button>узнать больше</button>
-        </div>
+      <div class="header-bg">
+        <img src="img/header-planet.svg" class="header-planet" />
+        <img src="img/header-rocket.svg" class="header-rocket" />
+      </div>
+      <div class="header-content">
+        <h1>Mars</h1>
+        <h2>Мир красного песка</h2>
+        <button>узнать больше</button>
+      </div>
     </header>
     <main class="main-section">
-        <section class="about-container">
-            <div class="about-left">
-                <div class="about-alien">
-                    <img src="img/section-2-alien-eye.svg" class="about-alien-eye">
-                </div>
-                <img src="img/section-2-planets.svg" class="about-planet">
-            </div>
-            <div class="about-right">
-                <h2>О планете</h2>
-                <p>Марс - это четвертая планета от Солнца. Его масса составляет 6,39E23 kg. Атмосферное давление на марсе составляет 6.01 мбар, а уровень кислорода в ней достигает всего лишь 0,145%. Температуры достигают от -153 до +35 градусов Цельсия. Один год на Марсе равен 687 дней</p>
-            </div>
-        </section>
+      <section class="about-container">
+        <div class="about-left">
+          <div class="about-alien">
+            <img src="img/section-2-alien-eye.svg" class="about-alien-eye" />
+          </div>
+          <img src="img/section-2-planets.svg" class="about-planet" />
+        </div>
+        <div class="about-right">
+          <h2>О планете</h2>
+          <p>
+            Марс - это четвертая планета от Солнца. Его масса составляет 6,39E23
+            kg. Атмосферное давление на марсе составляет 6.01 мбар, а уровень
+            кислорода в ней достигает всего лишь 0,145%. Температуры достигают
+            от -153 до +35 градусов Цельсия. Один год на Марсе равен 687 дней
+          </p>
+        </div>
+      </section>
     </main>
     <section class="section-study">
-
+      <div class="study-top">
+        <h2>Как люди покоряют Марс</h2>
+        <div class="study-container">
+          <p>
+            Человечество активно изучает эту планету. На данный момент NASA
+            запустила уже 4 марсохода:
+          </p>
+          <div class="study-rovers">
+            <div>
+              <img src="img/section-3-rover-1-ic.svg" />
+              <p>Соджорнер</p>
+            </div>
+            <div>
+              <img src="img/section-3-rover-2-ic.svg" />
+              <p>Оппортюнити</p>
+            </div>
+            <div>
+              <img src="img/section-3-rover-3-ic.svg" />
+              <p>Кьюриосити</p>
+            </div>
+            <div>
+              <img src="img/section-3-rover-4-ic.svg" />
+              <p>Персевиранс</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="study-bottom">
+        <img src="img/section-3-alien.svg" class="study-alien" />
+        <img src="img/section-3-rover.svg" class="study-rover" />
+      </div>
     </section>
-</body>
-<html>
-
-<!-- В первом уроке тебе нужно было сделать рабочий макет внутри программы figma, по образцу, который тебе предоставлен. Или же сделать свой сайт по тематике, но следуя структуре, представленной в шаблоне.
+    <section class="mars-moons">
+      <h2>А еще у Марса есть спутники</h2>
+      <div class="mars-orbit">
+        <img src="img/section-4-mars.svg" class="mars-planet"/>
+        <div class="mars-phobos">
+            <img src="img/section-4-phobos.svg" />
+            <p>Фобос</p>
+        </div>
+        <div class="mars-deimos">
+            <img src="img/section-4-deimos.svg" />
+            <p>Деймос</p>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <p>Футер</p>
+    </footer>
+  </body>
+  <html>
+    <!-- В первом уроке тебе нужно было сделать рабочий макет внутри программы figma, по образцу, который тебе предоставлен. Или же сделать свой сайт по тематике, но следуя структуре, представленной в шаблоне.
 
 Сегодня же домашним заданием будет являться верстка этого дизайна. Верстка должна быть выполнена с использованием семантических тегов и проверена на валидаторе, на предмет ошибок в коде.
 Материалы в папке "Знакомство с Figma -->
+
+<!-- Сделать раздел со спутниками  предпоследний раздел  с ракетой (тех задание в Домашнее задание.pdf) -->
+
+  </html>
+</html>
